proyecto tienda update

--- a/Proyectos_Javascripts/Tienda/package.json
+++ b/Proyectos_Javascripts/Tienda/package.json
@@ -1,17 +1,21 @@
 {
+  "type": "module",
   "name": "tienda",
-	"version": "1.0.0",
-	"description": "",
-	"main": "index.js",
-	"scripts": {
-		"test": "echo \"Error: no test specified\" && exit 1",
-		"sass": "sass --watch --style=compressed sass/index.scss public/bundle.css",
-		"build": "rollup --watch --config"
-	},
+  "version": "1.0.0",
+  "main": "index.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "sass": "sass --watch --style=compressed sass/index.scss public/bundle.css",
+    "build": "rollup --watch --config"
+  },
   "keywords": [],
-	"author": "",
-	"license": "ISC",
+  "author": "",
+  "license": "ISC",
   "devDependencies": {
     "rollup": "^4.12.0"
-  }
+  },
+  "dependencies": {
+    "fsevents": "^2.3.3"
+  },
+  "description": ""
 }
